# lrs-agents

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUTHENTICATION_COMPLETION_REPORT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  setup.py  setup_lrs_integration.py
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
.ruff_cache/0.12.5/: 548675636396834283  6280666274585014452
.ruff_cache/0.14.14/: 3926343314252968797
applications/auth/: auth_api.py  jwt_auth.py
config/: pyproject.toml  requirements.txt  requirements_simple.txt  run.sh  run_phase7_web.sh  setup.sh
data/: cognitive_demo_results.json  comprehensive_benchmark_results_1769162312.json  custom_benchmark_suite.json  lightweight_benchmark_results.json  package.json  performance_baselines.json  plugin_registry.json  test_results.json  tsconfig.json
deploy/: README.md  deploy.sh
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  init.sql  nginx.conf
docs/: AGENTS.md  COMPLETE_PROJECT_LOG.md  COMPREHENSIVE_INTEGRATION.md  DIRECTORY_ORGANIZATION.md  DOCUMENTATION_INDEX.md  FINAL_MISSION_ACCOMPLISHED.md  FINAL_PROJECT_SUMMARY.md  GG.md  INTEGRATION_GUIDE.md  LRS_AGENTS_INTEGRATION_COMPLETE.md  LRS_OPENCODE_COURSE_OF_ACTION.md  LRS_OPENCODE_INTEGRATION_COMPLETE.md  Makefile  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_6_FINAL_PROJECT_OVERVIEW.md  PHASE_6_RESEARCH_INNOVATION_ROADMAP.md  PHASE_6_TASK_MANAGEMENT_PLAN.md  PHASE_7_COMPLETE.md  cognitive_demo.html  conf.py  fix_docs.sh  logs.md  nbx.md  opencode-capabilities.md  requirements.txt  session_conversation_complete.md
docs/source/: README.md  conf.py  index.rst
examples/: __init__.py  autogpt_research_agent.py  chaos_benchmark.py  llm_policy_generation.py  llm_vs_exhaustive_benchmark.py  multi_agent_warehouse.py  multi_agent_warehouse_coordination.py  quickstart.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_219d0fd39b6f8538___init___py.html  z_219d0fd39b6f8538_dashboard_py.html  z_219d0fd39b6f8538_structured_logging_py.html  z_219d0fd39b6f8538_tracker_py.html  z_4df8ff9b2dc5afa8___init___py.html  z_4df8ff9b2dc5afa8_ai_assistant_py.html  z_4df8ff9b2dc5afa8_analytics_py.html  z_4df8ff9b2dc5afa8_bridge_py.html  z_4df8ff9b2dc5afa8_config_py.html  z_4df8ff9b2dc5afa8_coordinator_py.html  z_4df8ff9b2dc5afa8_example_system_py.html  z_4df8ff9b2dc5afa8_mesh_network_py.html  z_4df8ff9b2dc5afa8_optimizer_py.html  z_4df8ff9b2dc5afa8_plugins_py.html  z_4df8ff9b2dc5afa8_precision_mapper_py.html  z_4df8ff9b2dc5afa8_rest_endpoints_py.html  z_4df8ff9b2dc5afa8_state_mirror_py.html  z_4df8ff9b2dc5afa8_tests_py.html  z_4df8ff9b2dc5afa8_tool_py.html  z_4df8ff9b2dc5afa8_websocket_manager_py.html  z_5428f090f915516c___init___py.html  z_5428f090f915516c_lightweight_lrs_py.html  z_5428f090f915516c_lrs_integration_py.html  z_5428f090f915516c_lrs_opencode_bridge_py.html  z_5428f090f915516c_lrs_opencode_integration_py.html  z_5428f090f915516c_opencode_lrs_tool_py.html  z_5428f090f915516c_setup_lrs_integration_py.html  z_5428f090f915516c_simplified_integration_py.html  z_640d56dea1ffa8d0___init___py.html  z_640d56dea1ffa8d0_autogpt_adapter_py.html  z_640d56dea1ffa8d0_langchain_adapter_py.html  z_640d56dea1ffa8d0_langgraph_py.html  z_640d56dea1ffa8d0_openai_assistants_py.html  z_686c0a1fbeb770c1___init___py.html  z_686c0a1fbeb770c1_adapters_py.html  z_686c0a1fbeb770c1_messaging_py.html  (+45 more)
integration-bridge/: .coverage  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.test.toml  pyproject.toml
integration-bridge/.pytest_cache/v/cache/: lastfailed  nodeids
integration-bridge/.ruff_cache/0.12.5/: 3733181908303029169  4376277216442012880  5374944027552855213  645350636493862538  9105668764471551216
integration-bridge/docker/: entrypoint.sh
integration-bridge/k8s/: deployment.yaml  hpa.yaml  service.yaml
integration-bridge/src/opencode_lrs_bridge/: __init__.py  main.py
integration-bridge/src/opencode_lrs_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
integration-bridge/src/opencode_lrs_bridge/api/: __init__.py  endpoints.py
integration-bridge/src/opencode_lrs_bridge/auth/: __init__.py  middleware.py  security.py
integration-bridge/src/opencode_lrs_bridge/config/: __init__.py  settings.py
integration-bridge/src/opencode_lrs_bridge/models/: __init__.py  schemas.py
integration-bridge/src/opencode_lrs_bridge/optimization/: __init__.py  policy_generator.py
integration-bridge/src/opencode_lrs_bridge/tools/: __init__.py  integration.py
integration-bridge/src/opencode_lrs_bridge/utils/: __init__.py  advanced_security.py  analytics.py  circuit_breaker.py  database.py  sync.py  timeout_handler.py  tracing.py
integration-bridge/src/opencode_lrs_bridge/websocket/: __init__.py  manager.py
integration-bridge/tests/: __init__.py  conftest.py  integration_load_tests.py  test_api.py  test_websocket.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  persistent-volume.yaml  secrets.yaml  service.yaml
lrs/: __init__.py  cli.py
lrs_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
neuralblitz-v50/: AUTHENTICATION_IMPLEMENTATION.md  PRODUCTION_DEPLOYMENT_REPORT.md  multi_reality_nn.py  quantum_spiking_neuron.py  requirements.txt  test_auth.sh  test_auth_py.py
tests/: __init__.py  conftest.py  pytest.ini  test_communication.py  test_coordinator.py  test_free_energy.py  test_import.py  test_integration_langgraph.py  test_langchain_adapter.py  test_langgraph_integration.py  test_lens.py  test_llm_policy_generator.py  test_openai_integration.py  test_precision.py  test_shared_state.py  test_tracker.py
video_scripts/: 01_introduction.md  02_precision_explained.md  03_tool_composition.md  04_chaos_scriptorium.md  05_llm_integration.md  06_monitoring_dashboard.md  07_production_deployment.md  08_multi_agent_preview.md
(+103 files in other folders)
