[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lrs-agents"
version = "0.2.0"
description = "Resilient AI Agents via Active Inference and Precision Tracking"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LRS-Agents Contributors", email = "contact@lrs-agents.dev"}
]
keywords = [
    "active-inference",
    "ai-agents",
    "free-energy-principle",
    "langchain",
    "reinforcement-learning",
    "tool-use",
    "adaptive-systems"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

# Core dependencies required for the mathematical engine
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
# Integration extras
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.20"
]
openai = [
    "openai>=1.0.0"
]
monitoring = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0"
]

# Development & Quality Assurance
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0"
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "hypothesis>=6.88.0",
    "lrs-agents[langchain,openai]" # Tests need these to import modules
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
    "lrs-agents[langchain,openai,monitoring]" # Docs need these to generate API ref
]

# Comprehensive install
all = [
    "lrs-agents[langchain,openai,monitoring,dev,test,docs]"
]

[project.urls]
Homepage = "https://github.com/NeuralBlitz/lrs-agents"
Documentation = "https://lrs-agents.readthedocs.io"
Repository = "https://github.com/NeuralBlitz/lrs-agents"
"Bug Tracker" = "https://github.com/NeuralBlitz/lrs-agents/issues"
Changelog = "https://github.com/NeuralBlitz/lrs-agents/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["lrs"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E", "W", "F", "I", "C", "B", "UP",
]
ignore = [
    "E501", "B008", "C901",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "openai.*",
    "streamlit.*",
    "plotly.*",
    "scipy.*",
    "hypothesis.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["lrs"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]
