[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lrs-agents"
version = "0.2.0"
description = "Resilient AI Agents via Active Inference and Precision Tracking"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LRS-Agents Contributors", email = "contact@lrs-agents.dev"}
]
keywords = [
    "active-inference",
    "ai-agents",
    "free-energy-principle",
    "langchain",
    "reinforcement-learning",
    "tool-use",
    "adaptive-systems"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "typing-extensions>=4.5.0",
]

# --- FIX: Ensure these are under .optional-dependencies ---
[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.20"
]
openai = [
    "openai>=1.0.0"
]
monitoring = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0"
]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0"
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "hypothesis>=6.88.0",
    "lrs-agents[langchain,openai]" 
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
    "lrs-agents[langchain,openai,monitoring]"
]
all = [
    "lrs-agents[langchain,openai,monitoring,dev,test,docs]"
]

[project.urls]
Homepage = "https://github.com/NeuralBlitz/lrs-agents"
Documentation = "https://lrs-agents.readthedocs.io"
Repository = "https://github.com/NeuralBlitz/lrs-agents"

[tool.setuptools]
packages = ["lrs"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
