[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "lrs-agents",
    "pydantic-core",
    "langchain-core",
    "fastapi",
    "uvicorn",
    "websockets",
    "python-multipart",
    "pydantic>=2.12.5",
    "pyjwt",
]
